--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,7 @@
 # Compiled output
 /packages/*/lib
 /test-packages/*/lib
+/test-packages/v2-ts-ember-addon/
 packages/template/-private/dsl/elements.d.ts
 packages/template/-private/dsl/lib.dom.augmentation.d.ts
 
