--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,7 @@ jobs:
       - uses: pnpm/action-setup@v2
       - uses: actions/setup-node@v4
         with:
+          node-version: 24
           cache: "pnpm"
       - run: pnpm reset
       - run: pnpm --filter '*' test:build
