--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -137,8 +137,8 @@
     "@types/mocha": "^10.0.1",
     "@types/semver": "^7.3.13",
     "@types/vscode": "^1.108.1",
-    "@volar/language-server": "2.4.27",
-    "@volar/vscode": "2.4.27",
+    "@volar/language-server": "~2.4.27",
+    "@volar/vscode": "~2.4.27",
     "@vscode/test-electron": "^2.5.2",
     "@vscode/vsce": "^2.22.0",
     "esbuild": "^0.24.0",
