--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "rimraf": "^6.0.1",
     "svg-element-attributes": "^2.1.0",
     "svg-event-attributes": "^2.0.2",
-    "typescript": ">=5.6.0"
+    "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@10.6.2",
   "volta": {
