--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -26,15 +26,15 @@
   ],
   "devDependencies": {
     "@glimmer/component": "^2.0.0",
-    "expect-type": "^1.2.1",
-    "sums-up": "^2.1.0",
-    "ember-source": "^6.2.0",
-    "typescript": ">=5.6.0",
     "aria-attributes": "^2.0.1",
+    "ember-source": "^6.2.0",
+    "expect-type": "^1.2.1",
     "html-element-attributes": "^3.3.0",
     "html-event-attributes": "^2.2.0",
+    "sums-up": "^2.1.0",
     "svg-element-attributes": "^2.1.0",
-    "svg-event-attributes": "^2.0.2"
+    "svg-event-attributes": "^2.0.2",
+    "typescript": "^5.9.3"
   },
   "publishConfig": {
     "access": "public"
