--- a/packages/tsserver-plugin/package.json
+++ b/packages/tsserver-plugin/package.json
@@ -25,7 +25,7 @@
     "@volar/language-core": "~2.4.27",
     "@volar/typescript": "~2.4.27",
     "jiti": "~2.4.2",
-    "typescript": ">=5.6.0"
+    "typescript": "^5.9.3"
   },
   "publishConfig": {
     "access": "public"
