--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -145,7 +145,7 @@
     "expect": "^29.5.0",
     "glob": "^10.5.0",
     "mocha": "^10.2.0",
-    "reactive-vscode": "1.0.0-beta.2",
+    "reactive-vscode": "0.4.1",
     "semver": "^7.5.2",
     "typescript": "^5.9.3",
     "vscode-ext-gen": "^1.5.1"
